--- a/src/web/NS.WebApp.MVC/Properties/launchSettings.json
+++ b/src/web/NS.WebApp.MVC/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "NS.WebApp.MVC": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:44340",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
