removed generated files from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,5 @@ src/services/NS.Order.API/obj/
 src/services/NS.Payment.API/obj/
 
 src/web/NS.WebApp.MVC/obj/
+
+src/building blocks/NS.Core/obj/Debug/netcoreapp3.1/
